--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button secondary outline full (click)="goTo('sessions')">Sessions</button>
-  <button ion-button secondary outline full (click)="goTo('speakers')">Speakers</button>
-  <button ion-button secondary outline full>About</button>
+  <button ion-button secondary outline block (click)="goTo('sessions')">Sessions</button>
+  <button ion-button secondary outline block (click)="goTo('speakers')">Speakers</button>
+  <button ion-button secondary outline block>About</button>
 </ion-content>
