--- a/src/pages/session-detail/session-detail.html
+++ b/src/pages/session-detail/session-detail.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Session</ion-title>
+    <ion-buttons ion-button icon-only color="dark" clear end>
+      <ion-icon name="home"></ion-icon>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
