--- a/src/pages/speakers/speakers.html
+++ b/src/pages/speakers/speakers.html
@@ -7,10 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <button ion-button menuToggle>
+    <ion-buttons ion-button menuToggle start>
       <ion-icon name="menu"></ion-icon>
-    </button>
+    </ion-buttons>
     <ion-title>Speakers</ion-title>
+    <ion-buttons ion-button icon-only color="dark" clear end>
+      <ion-icon name="home"></ion-icon>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -21,7 +24,7 @@
     <ion-card *ngFor="let speaker of speakers" (click)="lookAt(speaker.id)" >
       <ion-item>
         <ion-avatar item-left>
-          <img src="images/{{speaker.image}}">
+          <img src="images/{{speaker.image || 'default_avatar.jpg'}}">
         </ion-avatar>
         <h2><b>{{speaker.firstname}} {{speaker.lastname}}</b></h2>
         <p [hidden]="!speaker.company"><b>Company : </b>{{speaker.company}}</p>
