Add about page with device information

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,5 +20,5 @@
 
   <button ion-button secondary outline block (click)="goTo('sessions')">Sessions</button>
   <button ion-button secondary outline block (click)="goTo('speakers')">Speakers</button>
-  <button ion-button secondary outline block>About</button>
+  <button ion-button secondary outline block (click)="goTo('about')">About</button>
 </ion-content>
