Add comments insert with sqlite

--- a/src/pages/session-detail/session-detail.html
+++ b/src/pages/session-detail/session-detail.html
@@ -26,4 +26,5 @@
       </ion-item>
     </ion-list>
   </ion-card>
+  <button ion-button block (click)="goToNotes(session?.id)">Mes notes</button>
 </ion-content>
