--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the About page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>about</ion-title>
+    <ion-title>About</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,7 +9,7 @@
 
 <ion-content padding>
   <ion-card>
-    <ion-card-header>About phone</ion-card-header>
+    <ion-card-header><b>About phone</b></ion-card-header>
     <ion-card-content>
       <b>UUID :</b> {{info.uuid}} <br/>
       <b>Platform :</b> {{info.platform}} <br/>
@@ -25,7 +19,7 @@
     </ion-card-content>
   </ion-card>
   <ion-card>
-    <ion-card-header>About App</ion-card-header>
+    <ion-card-header><b>About App</b></ion-card-header>
     <ion-card-content>
       <b>Developer :</b> Pierre GEFFRIAUD <br/>
       <b>Organization :</b> Ecole des Mines de Nantes <br/>
