--- a/src/pages/speaker-detail/speaker-detail.html
+++ b/src/pages/speaker-detail/speaker-detail.html
@@ -14,6 +14,11 @@
   <div class="row">
     <div class="col col-center text-center">
       <h1>{{speaker?.firstname}} {{speaker?.lastname}}</h1>
+      <ion-item no-lines>
+        <ion-label>Ajouter à mes contacts</ion-label>
+        <ion-toggle color="secondary" checked="false" [(ngModel)]="toggleContact" (ionChange)="changeToggle(toggleContact)"></ion-toggle>
+      </ion-item>
+      <hr/>
       <img src="images/{{speaker?.image || 'default_avatar.jpg'}}" alt="pic" class="speakerPic" height="250" width="250"/>
       <p>{{speaker?.about}}</p>
     </div>
