--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,9 +1,10 @@
 <ion-header>
-
   <ion-navbar>
+    <ion-buttons ion-button menuToggle start>
+      <ion-icon name="menu"></ion-icon>
+    </ion-buttons>
     <ion-title>About</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
