--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
       <img src="images/imt-logo.jpg" alt="logo-imt" />
       <hr/>
       <h1>Meetup</h1>
-      <h3>Du 12/03/17 au 18/03/17</h3>
+      <h3>{{date | date: 'dd/MM/yyyy'}}</h3>
     </ion-card-content>
   </ion-card>
 
