--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-navbar>
-    <ion-buttons ion-button menuToggle start>
-      <ion-icon name="menu"></ion-icon>
-    </ion-buttons>
-    <ion-title>About</ion-title>
-  </ion-navbar>
-</ion-header>
+   <ion-navbar>
+     <button ion-button menuToggle>
+       <ion-icon name="menu"></ion-icon>
+     </button>
+     <ion-title>About</ion-title>
+   </ion-navbar>
+ </ion-header>
 
 
 <ion-content padding>
