--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Meetup</ion-title>
+   <ion-navbar>
+     <button ion-button menuToggle>
+       <ion-icon name="menu"></ion-icon>
+     </button>
+     <ion-title>Welcome</ion-title>
   </ion-navbar>
 </ion-header>
 
